@@ -53,6 +53,7 @@ Change log 1.3 (under development)
 * Fixed a major issue with the prepare for test algorithm. Before classes were accidentally prepared for test automatically if the fully qualified name of the class started with the same fully qualified name as a class that were prepared for test. This has now been resolved. This may lead to backward incompatibility issues in cases where tests didn't prepare all necessary artifacts for test.
 * Mockito extension API now supports verification of private methods (for both static and instance methods). Use verifyPrivate(..).invocation(..), e.g. verifyPrivate(myObject, times(2)).invocation("myMethod", argument1, argument2).
 * Verification behavior of static method in the Mockito extension API has changed. Before you did "verifyStatic(MyClass.class); MyClass.methodToVerify(argument);", now you do "verifyStatic(); MyClass.methodToVerify(argument);". You can also pass a verification mode when verifying static methods: "verifyStatic(times(2)); MyClass.methodToVerify(argument);". This change is NOT backward compatible with version 1.2.5.
+* Mockito extension API now supports "verifyNoMoreInteractions" and "verifyZeroInteractions" for both instance mocks, class mocks and new instance mocks.
 
 Change log 1.2.5 (released 2009-05-05)
 --------------------------------------
